fix: color in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: black;
   background: linear-gradient(
       to bottom,
       transparent,
